# example2

./: .gitignore  crud_m2m.py  crud_select.py  db_example2.sqlite3  items_views.py  main.py  pyproject.toml  queries.sql  readme.md  readme_1(models).md  readme_2(auth).md
alembic/: env.py
alembic/versions/: 2024_10_28_1035-5d0718036ac8_create_products_table.py  2024_10_28_1156-823b35fd8108_create_users_table.py  2024_10_28_1235-79dc7f93f7c5_create_posts_table.py  2024_10_28_1723-4bf725b91184_create_profile_table.py  2024_10_30_1440-8453e9ab5a65_create_orders_table.py  2024_10_31_1529-85279d8e4b60_create_order_product_association_table.py  2024_11_01_2049-2dbfcf7b51b0_add_count_column_to_order_product_.py  2024_11_02_1319-7cc6a7863da9_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  database.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
